[package]
name = "busy"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true

[dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
clap = "4.5.13"
clap_complete = { version = "4.5.14", features = ["unstable-dynamic"] }
colored = "2"
env_logger = "0.11.5"
log = "0.4.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
subprocess = "0.2.9"
tempfile = "3.12.0"
uuid = { version = "1.10.0", features = [
  "serde",
  "v4",
  "fast-rng",
  "macro-diagnostics",
] }
